# diske

./: CLAUDE.md  Cargo.toml  bundle.sh
.github/workflows/: release.yml
scripts/: package-release-windows.ps1  package-release.sh
src/: app.rs  main.rs
src/scan/: cache.rs  fs_tree.rs  mod.rs  walker.rs
src/treemap/: layout.rs
src/ui/: breadcrumbs.rs  colors.rs  mod.rs  sidebar.rs  status_bar.rs  treemap_view.rs
