[package]
name = "diske"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.31"
egui = "0.31"
jwalk = "0.8"
crossbeam-channel = "0.5"
rfd = "0.15"
bytesize = "2"
trash = "5"
open = "5"
dirs-next = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }
